--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
         <div class="alpha">
-            <a href="home.html"><img src="New IMG/firstlogo.png" alt=""></a>
+            <a href="home.html"><img src="New_IMG/firstlogo.png" alt=""></a>
             <div class="headertext">
                 <h1>Your One Call to Profering Permanent Solution to Your Electrical Problem,
                     Without Incurring to Many Damages to the Bank
@@ -129,4 +129,5 @@
         <script src="script.js"></script>
 
    </div>
+
 </html>
